# tbot-rs

./: .gitignore  Cargo.toml  Dockerfile.bot  Dockerfile.web  README.md  docker-compose.yml
bot/: Cargo.toml
bot/src/: main.rs  tg.rs
bot/src/tg/: callback_handler.rs  callbackdata.rs  keyboard.rs  tools.rs
db/: Cargo.toml
db/.sqlx/: query-138a8f8da0505247dc2416bbab602f23679ce1f5627b115880f68d19a0663b0d.json  query-15d7f25a401ac88cd68abce2e2ece24de546599dcf8bf1c59377e786bf66114a.json  query-246a357abc040593b339e31278c20d99d7c97bd129aae8cd8c25237836c88a66.json  query-4c5618b1a2282abaeea097785ae1ee4a77dea92ae921d2a78c12efa4899f581e.json  query-4faeb43ba4cf6ff140420b569877e222d3f22b6baf0de0eb10e2a47d46fe4e1a.json  query-68e7c97ffe60961e9f77ad2c8c4fbeeb5beb0729740007a58938490d71180a66.json  query-76c2fab904cc2286973a96fbc293093a54f1aa1cdd48eeaf6207dd456597f251.json  query-c981d03e44aed9ad76f9badc849aec53706ac9ff9cd0f4e68c1bab4e91996e90.json  query-f1021f40e29452696f3947fcd302e8ba1d9ebd0f4e326cb9a4111fd2cf51a495.json  query-ff72204d567121ee5ea47dc811aea5de20e0275371784c3c85aab2851153e4ee.json
db/migrations/: 20231214001644_moskino.sql
db/src/: lib.rs  tools.rs
web-parser/: Cargo.toml
web-parser/src/: args.rs  main.rs  moskino.rs
web-parser/src/moskino/: cinema.rs  movie.rs  session.rs  showtime.rs
