[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4.*", features = ["serde", "unstable-locales"] }
#
dotenv="0.15"
dotenv_codegen="0.15"
log = "0.4"
pretty_env_logger = "0.5"
